# tsumego-solver

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: main.rs  moves.rs  solving_puzzles.rs  unconditional_life.rs
benches/gotools/: main.rs
benches/gotools/puzzles/: lv1.1  lv1.10  lv1.11  lv1.12  lv1.13  lv1.14  lv1.2  lv1.3  lv1.4  lv1.5  lv1.6  lv1.7  lv1.8  lv1.9  lv2.1  lv2.10  lv2.11  lv2.12  lv2.13  lv2.14  lv2.2  lv2.3  lv2.4  lv2.5  lv2.6  lv2.7  lv2.8  lv2.9  lv3.1  lv3.10  lv3.11  lv3.12  lv3.13  lv3.14  lv3.2  lv3.3  lv3.4  lv3.5  lv3.6  lv3.7  (+44 more)
network/: .gitignore  pyproject.toml
network/network/: decode.py  train.py  visualise.py
network/network.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
network/tests/: test_network.py
src/: generation.rs  go.rs  lib.rs  main.rs  pn_search.rs  puzzle.rs
src/generation/: candidate.rs  validation.rs
src/generation/candidate/: boundary.rs
src/generation/snapshots/: tsumego_solver__generation__candidate__tests__snapshot_generate_candidate.snap
src/go/: benson.rs  bit_board.rs  sgf_conversion.rs
src/gotools_parser/: example_puzzles  grammar.pest  mod.rs
src/gotools_parser/snapshots/: tsumego_solver__gotools_parser__tests__parses_example_correctly.snap
src/puzzle/: abort_controller.rs  example_collector.rs  move_ranker.rs  profiler.rs  proof_number.rs  solution.rs  solving_iteration.rs  solving_session.rs  terminal_detection.rs
src/snapshots/: tsumego_solver__puzzle__tests__generated_00a1c46fb85ba4a7-3.snap  tsumego_solver__puzzle__tests__generated_0a0c446484626b51-3.snap  tsumego_solver__puzzle__tests__generated_0a2cae535ebf01be-3.snap  tsumego_solver__puzzle__tests__trace_expanded_nodes.snap  tsumego_solver__puzzle__tests__true_simple1-3.snap  tsumego_solver__puzzle__tests__true_simple2-3.snap  tsumego_solver__puzzle__tests__true_simple3-3.snap  tsumego_solver__puzzle__tests__true_simple4-3.snap  tsumego_solver__puzzle__tests__true_ultrasimple1-3.snap  tsumego_solver__puzzle__tests__true_ultrasimple2-3.snap
src/test_sgfs/: cannot_commit_suicide.sgf  capture_single_join_group.sgf  capture_two_recapture_one.sgf  capturing_has_precedence_over_suicide.sgf  complex_capture.sgf  ko_rule_simple.sgf  single_groups_are_captured.sgf  small_black_enclosed_regions.sgf  small_black_enclosed_regions_answer.sgf
src/test_sgfs/life_and_death/: all_alive1.sgf  all_dead1.sgf  mixture.sgf  (+1 more)
(+21 files in other folders)
