[package]
name = "tsumego-solver"
version = "0.1.0"
authors = ["Cameron Martin <cameronmartin123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgf-parser = "2.4.0"
petgraph = "0.5.0"
cursive = "0.14"
clap = "2.33.0"

[dev-dependencies]
criterion = "0.3.1"

[lib]
bench = false

[[bin]]
name = "debugger"
path = "src/bin/debugger/main.rs"
bench = false

[[bench]]
name = "moves"
harness = false

[[bench]]
name = "unconditional_life"
harness = false

[[bench]]
name = "solving_puzzles"
harness = false
