[package]
name = "tsumego-solver"
version = "0.1.2"
authors = ["Cameron Martin <cameronmartin123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgf-parser = "2.4.0"
petgraph = "0.5.0"
cursive = { version = "0.14", default-features = false, features = ["crossterm-backend"] }
clap = "2.33.0"
rand = "0.7"

[dev-dependencies]
criterion = "0.3.1"
quickcheck = "0.9"
quickcheck_macros = "0.9"

[lib]
bench = false

[[bin]]
name = "cli"
path = "src/bin/cli/main.rs"
bench = false

[[bench]]
name = "main"
harness = false

[profile.release]
lto = true

[profile.bench]
lto = true
