[package]
name = "tsumego-solver"
version = "0.1.2"
authors = ["Cameron Martin <cameronmartin123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgf-parser = "2.4.0"
clap = "2.33.0"
rand = "0.7"
pest = "2.1"
pest_derive = "2.1"

[dev-dependencies]
criterion = "0.3.1"
quickcheck = "0.9"
quickcheck_macros = "0.9"
insta = "0.16.0"

[lib]
bench = false

[[bin]]
name = "cli"
path = "src/bin/cli/main.rs"
bench = false

[[bench]]
name = "main"
harness = false

[[bench]]
name = "gotools"
harness = false

[profile.release]
lto = true

[profile.bench]
lto = true
