[tool.poetry]
name = "network"
version = "0.1.0"
description = ""
authors = ["Cameron Martin <cameron.martin@forgerock.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
